--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-confirm": "^0.3.0-7",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.1",
